--- a/2018_nips_vigil/vigil_bibliography.bib
+++ b/2018_nips_vigil/vigil_bibliography.bib
@@ -34,6 +34,14 @@
 	year={2017}
 }
 
+
+@article{guarnelo2016,
+	title={Towards deep symbolic reinforcementlearning},
+	author={Marta Garnelo, Kai Arulkumaran, and Murray Shanahan},
+	journal={arXiv preprint arXiv:1609.05518},
+	year={2016},
+}
+
 @article{hu2017learning,
 	title={Learning to reason: End-to-end module networks for visual question answering},
 	author={Hu, Ronghang and Andreas, Jacob and Rohrbach, Marcus and Darrell, Trevor and Saenko, Kate},
@@ -65,6 +73,14 @@
 	booktitle={ICCV},
 	pages={3008--3017},
 	year={2017}
+}
+
+@Article{kornuta2018accelerating,
+  author    = {Kornuta, Tomasz and Marois, Vincent and McAvoy, Ryan L. and Bouhadjar, Younes and Asseman, Alexis and Albouy, Vincent and Jayram, T.S. and Ozcan, Ahmet S.},
+  title     = {Accelerating Machine Learning Research with MI-Prometheus},
+  year      = {2018},
+  booktitle = {NIPS 2018 Workshop MLOSS},
+  url       = {https://openreview.net/forum?id=rJgZ0tpN2X},
 }
 
 
@@ -124,14 +140,6 @@
 	pages={21--40},
 	year={2017},
 	publisher={Elsevier}
-}
-
-
-@article{guarnelo2016,
-	title={Towards deep symbolic reinforcementlearning},
-	author={Marta Garnelo, Kai Arulkumaran, and Murray Shanahan},
-	journal={arXiv preprint arXiv:1609.05518},
-	year={2016},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
