simple table for parameters reduction

--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -80,3 +80,13 @@ knowledge base, as is done by the original MAC network in \emph{each} reasoning 
 	\end{align*}}
 \end{multicols}
 
+\begin{table}[]
+	\centering
+	\begin{tabular}{|c|c|c|c|c|c|c|}
+		\hline
+		                & Read Unit               & Write Unit &  Control Unit       & Input Unit & Output Unit & Overall  \\ \hline
+		 \% Parameters reduction  & -67\%  &   -50\%       &      -4\%               &  0\%    & 0\%    &     -5\%              \\  \hline
+	\end{tabular}
+	\caption{Percentage decrease of the number of parameters by unit between MAC and S-MAC models.}
+	\label{results}
+\end{table}
