--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -26,7 +26,7 @@ i.e., shared across all the reasoning steps.
 
 \noindent\textbf{Control unit:} 
 For both models, in the control unit, the question $q$ is first transformed in each step of 
-the reasoning using a \emph{position-aware}~\cite{hudson2018compositional} 
+%the reasoning using a \emph{position-aware}~\cite{hudson2018compositional} 
 linear layer: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 
 \begin{multicols}{2}
