--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -86,7 +86,7 @@ knowledge base, as is done by the original MAC network in \emph{each} reasoning 
 		\hline
 		                & Read Unit               & Write Unit &  Control Unit       & Input Unit & Output Unit & Overall  \\ \hline
 		  MAC number of parameters  &  787,969 &  524,800        &    6,822,913          &   15,923,712   &   801,308  &       20,138,526           \\  \hline
-		  S-MAC number of arameters  & 263,168  & 262,656       &    6,560,256               &  15,923,712    & 801,308    &       19,089,436           \\  \hline
+		  S-MAC number of parameters  & 263,168  & 262,656       &    6,560,256               &  15,923,712    & 801,308    &       19,089,436           \\  \hline
 		 \% parameters reduction  & -67\%  &   -50\%       &      -4\%               &  0\%    & 0\%    &     -5\%              \\  \hline
 		 
 		 
