Experiments - table with columns for finetuning. Missing dot in the intro

--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -20,6 +20,10 @@
 \usepackage{wrapfig}
 \usepackage{multicol}
 
+% For gap between cmidrules.
+\usepackage{array}
+\newcolumntype{C}{@{\extracolsep{0.1cm}}c@{\extracolsep{0pt}}}%
+
 \setlength{\columnsep}{1cm}
 \setlength{\columnseprule}{0.5pt}
 \def\columnseprulecolor{\color{Plum}}
