--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -81,16 +81,18 @@ knowledge base, as is done by the original MAC network in \emph{each} reasoning 
 \end{multicols}
 
 \begin{table}[]
-\centering
-	\begin{tabular}{|c|c|c|c|c|c|c|}
-		\hline
-		                & Read Unit               & Write Unit &  Control Unit       & Input Unit & Output Unit & Overall  \\ \hline
-		  MAC number of parameters  &  787,969 &  524,800        &    6,822,913          &   11,200,509   &   801,308  &       20,138,526           \\  \hline
-		  S-MAC number of parameters  & 263,168  & 262,656       &    6,560,256               &  11,200,509   & 801,308    &       19,089,436           \\  \hline
-		 \% parameters reduction  & -67\%  &   -50\%       &      -4\%               &  0\%    & 0\%    &     -5\%              \\  \hline
-		 
-		 
+	\caption{Percentage decrease of the number of parameters by units in the MAC Cell between MAC and S-MAC models}
+	\centering
+	\begin{tabular}{ccccCcCc}
+		\toprule
+	             & Read Unit               & Write Unit &  Control Unit         \\
+		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
+		MAC number of parameters  &  787,969 &  524,800        &    6,822,913    \\
+		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8}
+	    S-MAC number of parameters  & 263,168  & 262,656       &    6,560,768 \\
+	    \cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8}
+	     \% parameters reduction  & -67\%  &   -50\%       &      -4\%  \\
+		\bottomrule
 	\end{tabular}
-	\caption{Percentage decrease of the number of parameters by unit between MAC and S-MAC models.}
 	\label{results}
 \end{table}
