--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -81,7 +81,7 @@ knowledge base, as is done by the original MAC network in \emph{each} reasoning 
 \end{multicols}
 
 \begin{table}[]
-	\caption{Percentage decrease of the number of parameters by units in the MAC Cell between MAC and S-MAC models}
+	\caption{Percentage decrease of the number of parameters by units in the MAC Cell between MAC and Simplified-MAC models}
 	\centering
 	\begin{tabular}{ccccCcCc}
 		\toprule
@@ -89,10 +89,11 @@ knowledge base, as is done by the original MAC network in \emph{each} reasoning 
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		MAC number of parameters  &  787,969 &  524,800        &    6,822,913    \\
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8}
-	    S-MAC number of parameters  & 263,168  & 262,656       &    6,560,768 \\
+	    Simplified-MAC number of parameters  & 263,168  & 262,656       &    6,560,768 \\
 	    \cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8}
 	     \% parameters reduction  & -67\%  &   -50\%       &      -4\%  \\
 		\bottomrule
 	\end{tabular}
-	\label{results}
 \end{table}
+
+As a result we could decrease the number of trainable parameters. Table 1 shows a significant decrease in the number of parameters in the Read and Write units as well as a small drop in the Control unit. Those three units combined together compose the MAC cell which is the core of the network. It is important to emphasize that the MAC cell is the recurrent part of the network as opposed to the Input and Output unit that are call only once. That is why this reduction in the number of parameters is particularly important for the three MAC cell units and why we decided to focus on simplifying those equations.
