--- a/2018_nips_vigil/vigil_bibliography.bib
+++ b/2018_nips_vigil/vigil_bibliography.bib
@@ -42,6 +42,19 @@
 	year={2016},
 }
 
+@InProceedings{he2016resnet,
+  author    = {Kaiming He and Xiangyu Zhang and Shaoqing Ren and Jian Sun},
+  title     = {Deep Residual Learning for Image Recognition},
+  booktitle = {2016 {IEEE} Conference on Computer Vision and Pattern Recognition, {CVPR} 2016, Las Vegas, NV, USA, June 27-30, 2016},
+  year      = {2016},
+  pages     = {770--778},
+  bibsource = {dblp computer science bibliography, https://dblp.org},
+  biburl    = {https://dblp.org/rec/bib/conf/cvpr/HeZRS16},
+  doi       = {10.1109/CVPR.2016.90},
+  timestamp = {Thu, 25 May 2017 00:41:26 +0200},
+  url       = {https://doi.org/10.1109/CVPR.2016.90},
+}
+
 @article{hu2017learning,
 	title={Learning to reason: End-to-end module networks for visual question answering},
 	author={Hu, Ronghang and Andreas, Jacob and Rohrbach, Marcus and Darrell, Trevor and Saenko, Kate},
