--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -13,7 +13,7 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		\toprule
 		\multirow{2}{*}{Model} & \multicolumn{3}{c}{Training} &  \multicolumn{2}{c}{Fine-tuning} &  \multicolumn{2}{c}{Test} \\
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
-		& Set                & Time [h] & Acc [\%]          & Set & Acc [\%]  & Set & Acc [\%] \\
+		& Dataset                & Time [h] & Acc [\%]          & Dataset & Acc [\%]  & Dataset & Acc [\%] \\
 		\midrule
 		\multirow{3}{*}{MAC}  & CLEVR                       & 31         &  --   & --                     & 96.7                  & CLEVR    & 96.2          \\
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
