--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -90,7 +90,7 @@ knowledge base, as is done by the original MAC network in \emph{each} reasoning 
 		%\midrule
 	    simplified MAC & 263,168  & 262,656       &    6,560,768 \\
 	    \midrule
-	     Reduction [\%]  & -67\%  &   -50\%       &      -4\%  \\
+	     Reduction by [\%]  & 67\%  &   50\%       &      4\%  \\
 		\bottomrule
 	\end{tabular}
 	\caption{Numbers of trainable parameters in the units of MAC and simplified MAC cells}
