--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -94,12 +94,7 @@
 \maketitle
 
 \begin{abstract}
-  The abstract paragraph should be indented \nicefrac{1}{2}~inch
-  (3~picas) on both the left- and right-hand margins. Use 10~point
-  type, with a vertical spacing (leading) of 11~points.  The word
-  \textbf{Abstract} must be centered, bold, and in point size 12. Two
-  line spaces precede the abstract. The abstract must be limited to
-  one paragraph.
+We propose a simplified version of the MAC model with a new set of equations to improve training performances. We also test the performance of the MAC model on a novel task, the CLEVR CoGenT dataset. This task is designed to test  generalization and transfer learning abilities. We show how MAC performs on CLEVR CoGenT and compare it to other baselines. Finally we examine the model failures, and show that MAC sometimes struggles to differentiate real concepts like objects attributes. 
 \end{abstract}
 \input{introduction}
 \input{mac}
