More on experiments section.

--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -2,9 +2,10 @@
 
 We analyze MAC's generalization and transfer learning abilities by testing it on the CLEVR-CoGenT dataset. It is synthesized in the same way as CLEVR, but contains two conditions: in Condition A, all cubes are gray, blue, brown, or yellow and all cylinders are red, green, purple, or cyan; in Condition B, cubes and cylinders swap color palettes. Both conditions contain spheres of all colors. We also evaluate the simplified model on this dataset for comparison.
 
-The training procedure is layed out as follows: we train the MAC model (and simplified MAC) for 20 epochs on 90\% of the training sets of CLEVR \& CoGenT separately. We keep the remaining 10\% for validating the model at every epoch, and use the original validation sets as test sets, given that the ground truth labels for the true test sets are not available.
+The training procedure is layed out as follows: we train the MAC model (and simplified MAC) for 20 epochs on 90\% of the training sets of CLEVR \& CoGenT separately. We keep the remaining 10\% for validating the model at every epoch, and use the original validation sets as test sets.
+%given that the ground truth labels for the true test sets are not available.
 
-We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2017automatic}. We relied on the MI-Prometheus~\cite{kornuta2018accelerating} framework for training and testing of both models\footnote{Code along with training settings are available on \url{https://github.com/IBM/mi-prometheus/}}. For training we have used NVIDIA's GeForce GTX TITAN X. We followed the implementation details indicated in supplemental (Sec. A) of the original paper~\cite{hudson2018compositional}, to ensure a faithful comparison.
+We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2017automatic}. We relied on the MI-Prometheus~\cite{kornuta2018accelerating} framework for training and testing both variants\footnote{The code \& the training settings are available at \url{https://github.com/IBM/mi-prometheus/}}. For training, we used NVIDIA's GeForce GTX TITAN X. We followed the implementation details indicated in the  supplemental material (Sec. A) of the original paper~\cite{hudson2018compositional}, to ensure a faithful comparison.
 
 \begin{table}[]
 	\caption{CLEVR \& CoGenT accuracies for the MAC \& simplified MAC models}
@@ -31,8 +32,8 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 	\label{results}
 \end{table}
 
-We report the obtained scores in \tableref{results}. Taking the evaluation of MAC on CLEVR as a reference experiment, it yields an accuracy of 96.2\%, obtained after 31h of training.\vmf{Not sure if we should explain in more details why there's a 3\% gap..}
-Evaluating MAC on CoGenT shows that, like previous work (\cite{johnson2017inferring}, \cite{mascharka2018transparency})], the performance is worse on Condition B than Condition A after training only using Condition A data. As \tableref{results} shows, the MAC model achieves 79.5\% accuracy on Condition B, which surpasses the previously 78.8\% reported in \cite{perez2017film}. \tk{not sure why we report this, is it state-of-the-art?}
-The simplified MAC reaches an accuracy of 95.3\% on CLEVR, which is close to the reference score. Moreover, the simplified MAC presents the advantage to train faster, showing a decrease of 10.5\% in wall time. This point also holds true when training on CoGenT: not only does the simplified model trains faster, it also presents comparable performance when evaluated on both conditions.
+We report the obtained scores in \tableref{results}. Taking the evaluation of MAC on CLEVR as a reference experiment, it yields an accuracy of 96.2\%, obtained after 31.9h of training. The training wall time is coherent with what is reported in the original paper (roughly 30h of training for 20 epochs)\vmf{Not sure if we should explain in more details why there's a 3\% gap..}
+Evaluating MAC on CoGenT shows that, like previous work (\cite{johnson2017inferring}, \cite{mascharka2018transparency})], the performance is worse on Condition B than Condition A after training only using Condition A data. As \tableref{results} shows, the MAC model achieves 79.5\% accuracy on Condition B, and 96.9\% on Condition A.
+The simplified MAC reaches an accuracy of 95.3\% on CLEVR, which is close to the reference score. Moreover, it presents the advantage to train faster, showing a decrease of 10.5\% in wall time. This point also holds true when training on CoGenT: not only does the simplified model trains faster, it also presents comparable performance when evaluated on both conditions. The scores obtained on both conditions are coherent with the ones of MAC, indicating that the simplifications did not hinder its generalization capability.
 
-Following \cite{johnson2017inferring}, we then fine-tune both models using 3k images and 30k questions from the Condition B data.. \textit{To continue later on}.
+Following (\cite{johnson2017inferring}, \cite{perez2017film}), we then fine-tune both models using 3k images and 30k questions from the Condition B data, and re-evaluate them on both conditions.
