--- a/2018_nips_vigil/introduction.tex
+++ b/2018_nips_vigil/introduction.tex
@@ -5,7 +5,7 @@ In order to answer the questions the system  requires to master several perceptu
 
 To solve this type of reasoning task, many approaches have been explored although they often appear to struggle performing well on tasks with a structured and compositional nature \citep{hudson2018compositional}.
 More recent approaches adopt modular structures, resembling the trees of programming languages, that compose neural modules from a fixed predefined collection \cite{andreas2016learning,johnson2017inferring, mascharka2018transparency}. However, they rely on externally provided structured representations and functional programs, parsers or expert demonstration, and sometimes require reinforcement learning training schemes.
-These models’ structure is inherently rigid and the use of a range of specialized modules weaken their robustness and generalization capacities.
+These models' structure is inherently rigid and the use of a range of specialized modules weaken their robustness and generalization capacities.
 \tk{Compositional models are one major direction of research in VQA... but there are 3 others (including e.g. attention) that we do not mention here, thus my concern is that the above is not well balanced... I can add more when we will understand how much space is left.}
 
 There are many datasets for VQA such as DAQUAR~\citep{malinowski2014multi} or VQA~\citep{antol2015vqa}. The problem is they contain several biases (e.g. unbalanced questions or answers) that are often exploited by systems during learning~\citep{goyal2017making}.
