--- a/2018_nips_vigil/vigil_bibliography.bib
+++ b/2018_nips_vigil/vigil_bibliography.bib
@@ -88,11 +88,11 @@
 	year={2017}
 }
 
-@Article{kornuta2018accelerating,
+@article{kornuta2018accelerating,
   author    = {Kornuta, Tomasz and Marois, Vincent and McAvoy, Ryan L. and Bouhadjar, Younes and Asseman, Alexis and Albouy, Vincent and Jayram, T.S. and Ozcan, Ahmet S.},
   title     = {Accelerating Machine Learning Research with MI-Prometheus},
   year      = {2018},
-  booktitle = {NIPS 2018 Workshop MLOSS},
+  journal = {NIPS 2018 Workshop MLOSS},
   url       = {https://openreview.net/forum?id=rJgZ0tpN2X},
 }
 
