--- a/2018_nips_vigil/smac.tex
+++ b/2018_nips_vigil/smac.tex
@@ -1,33 +1,40 @@
 \subsection{Simplified MAC network}
 Our proposed modification to the MAC network is based on two heuristic
-simplifications of the equations governing a MAC cell. 
-First, we observed that when looking at the equations of different units
-together as a whole, we notice that there are several affine transformations
+simplifications of the MAC cell. 
+First, we observe that when looking at the equations of different units
+together as a whole, there are several linear layers
 that are applied in sequence (with no activation in-between).
-Therefore they can actually be combined to form a single affine transformation.
-The second observation uses the following heuristic argument:
-suppose there is a single affine transformation which preserves the number
+Therefore they can actually be combined to form a single linear layer.
+The second observation uses the following heuristic assumption:
+suppose there is an affine transformation that preserves the number
 of dimensions. Then one can assume that the transformation is invertible
 so as to avoid a loss in the information. Applying this principle to 
-equations in the read and write unit results in eliminating an affine
-operation of the knowledge base in the recurrent network. Instead we compute
-this operation on the knowledge base right after we apply the 2 
-trainable CNN layers (i.e. prior to the reasoning steps). This results
-in a significant savings in training time, as our experiments demonstrate
+equations in the MAC cell results in eliminating one of the linear layers applied to
+the knowledge base in the cell. With a careful reorganization, we in fact
+can compute this operation on the knowledge base right after we apply the 2 
+ CNN layers on the feature maps (i.e. prior to the reasoning steps). Thus, we can work purely
+with this \emph{projected} knowledge base, that yields
+noticeable savings in training time, as our experiments demonstrate
 below, without incurring too much drop in accuracy.
 
 In the description below, the original MAC cell equations are shown on the \emph{left}
 while our simplified equations are shown (in color) on the {\color{Plum} \emph{right}}.
 (The equation numbering is the same as in~\cite{hudson2018compositional}.)
 
-\noindent\textit{Notation:} The index/position $i$ below denotes the reasoning step. 
+\noindent\textit{Notation.}
+Let $q$ denote the global context of the question
+and let $\cw_s$ denote the contextual embedding of a word $s$ in the question.
+For each tensor of dimension $H \times W \times d$ corresponding to an image,
+its knowledge base $\{ \kb_{hw}\}$ is the set of $d$-dimensional vectors indexed by 
+$h \in \{1,2,\dots,H\}$ and $w \in \{1,2,\dots, W\}$.
+The index/position $i$ below denotes the reasoning step. 
 Unless mentioned otherwise, the weights/biases are invariant w.r.t $i$, 
 i.e., shared across all the reasoning steps. 
 
 \noindent\textbf{Control unit:} 
 For both models, in the control unit, the question $q$ is first transformed in each step of 
-%the reasoning using a \emph{position-aware}~\cite{hudson2018compositional} 
-linear layer: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
+the reasoning using a \emph{position-aware}
+linear layer depending on $i$: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 
 \begin{multicols}{2}
 	\noindent
@@ -49,14 +56,6 @@ linear layer: $q_i = U_i^{[d \times 2d]} q + b_i^{[d]}$.
 \end{multicols}
 
 \noindent\textbf{Read and write units:}
-For both models below, $\kb_{hw}$ denotes the 
-\emph{knowledge base}~\cite{hudson2018compositional}
-consisting of 3D tensors with dimension $H \times W \times d$ for each image
-in the data set. The difference in computing $\kb_{hw}$ is that the simplified MAC uses
-an additional linear layer on top of the 2 CNN layers present in the original MAC network.
-This circumvents the need for performing additional linear transformations on the 
-knowledge base, as is done by the original MAC network in \emph{each} reasoning step.
-
 \begin{multicols}{2}
 	\noindent
 	\begin{align*}
@@ -79,6 +78,10 @@ knowledge base, as is done by the original MAC network in \emph{each} reasoning 
 	&\mem_i = W_{rm}^{[d \times d]} \rr_i + b_{rm}^{[d]} \tag{w1}
 	\end{align*}}
 \end{multicols}
+For the original MAC model shown on the left above, eqn.~(r1) can be slightly optimized for time
+by computing the linear layer on the knowledge base \emph{prior} to the reasoning steps.
+This induces additional space due to storing this projected knowledge base throughout the
+reasoning steps.
 
 \begin{table}
 	\centering
