Modified table with positions to ve filled

--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -16,11 +16,21 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		& Dataset                & Time [h:m] & Acc [\%]          & Dataset & Acc [\%]  & Dataset & Acc [\%] \\
 		\midrule
-		\multirow{10}{*}{MAC} & \multirow{4}{*}{CLEVR}  & \multirow{4}{*}{30:52}  & \multirow{4}{*}{96.70} & \multirow{4}{*}{--}   & \multirow{4}{*}{--}  & CLEVR    & 96.17          \\
+		\multirow{15}{*}{MAC} & \multirow{10}{*}{CLEVR}  & \multirow{10}{*}{30:52}  & \multirow{10}{*}{96.70} & \multirow{4}{*}{--}   & \multirow{4}{*}{--}  & CLEVR    & 96.17          \\
 		\cmidrule{7-8} 
 		 &                        &  &               &     &                                & CoGenT-A    &  96.22   \\
 		\cmidrule{7-8} 
 		  &                        &   &              &     &                               & CoGenT-B   & 96.27  \\
+
+		\cmidrule{5-6} \cmidrule{7-8} 
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{x}          & CoGenT-A &  x         \\
+		\cmidrule{7-8} 
+		&                             &                                         &       &         &                & CoGenT-B &    x       \\
+		\cmidrule{5-6} \cmidrule{7-8} 
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{x}          & CoGenT-A &  x         \\
+		\cmidrule{7-8} 
+		&                             &                                         &       &         &                & CoGenT-B &    x       \\  
+		  
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		& \multirow{5}{*}{CoGenT-A} & \multirow{5}{*}{30:52}     & \multirow{5}{*}{97.02}   &  \multirow{2}{*}{--}  &  \multirow{2}{*}{--}    & CoGenT-A & 96.88         \\
 		\cmidrule{7-8} 
@@ -30,11 +40,21 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		\cmidrule{7-8} 
 		&                             &                                         &       &         &                & CoGenT-B &    95.62       \\
 		\midrule
-		\multirow{10}{*}{S-MAC} & \multirow{3}{*}{CLEVR}  & \multirow{3}{*}{28:30}  & \multirow{3}{*}{95.82} & \multirow{3}{*}{--}   & \multirow{3}{*}{--}  & CLEVR    & 95.29           \\
+		\multirow{15}{*}{S-MAC} & \multirow{10}{*}{CLEVR}  & \multirow{10}{*}{28:30}  & \multirow{10}{*}{95.82} & \multirow{3}{*}{--}   & \multirow{3}{*}{--}  & CLEVR    & 95.29           \\
 		\cmidrule{7-8} 
 		&                        &  &               &     &                                & CoGenT-A    &  95.47   \\
 		\cmidrule{7-8} 
 		&                        &   &              &     &                               & CoGenT-B   &  95.58  \\		
+		
+		\cmidrule{5-6} \cmidrule{7-8} 
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{x}          & CoGenT-A &  x         \\
+		\cmidrule{7-8} 
+		&                             &                                         &       &         &                & CoGenT-B &    x       \\
+		\cmidrule{5-6} \cmidrule{7-8} 
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{x}          & CoGenT-A &  x         \\
+		\cmidrule{7-8} 
+		&                             &                                         &       &         &                & CoGenT-B &    x       \\  		
+		
 		\cmidrule{2-4} \cmidrule{5-6} \cmidrule{7-8} 
 		& \multirow{5}{*}{CoGenT-A}   & \multirow{5}{*}{28:33}   & \multirow{5}{*}{96.09}  &  \multirow{2}{*}{--}  &  \multirow{2}{*}{--}   & CoGenT-A & 95.91          \\
 		\cmidrule{7-8} 
