Template for appendices

--- a/2018_nips_vigil/main.tex
+++ b/2018_nips_vigil/main.tex
@@ -105,4 +105,7 @@ We propose a simplified version of the MAC model with a new set of equations to 
 \bibliographystyle{alpha}
 \bibliography{vigil_bibliography}
 
+\newpage
+\input{appendix}
+
 \end{document}
