Description of content of appendix

--- a/2018_nips_vigil/appendix.tex
+++ b/2018_nips_vigil/appendix.tex
@@ -2,6 +2,26 @@
 
 \section{Description of datasets}
 
+\begin{enumerate}
+\item Some description (with link to the paper) about the datasets. Maybe we can "import" material from main paper, making it lighter...
+\item Table with attributes/feature combinations of CLEVR/CoGenT-A/CoGenT-B
+\item Some exemplary pictures?
+\end{enumerate}
+
 \section{Full MAC and S-MAC comparison}
 
+We think that in the main paper we should leave:
+\begin{itemize}
+\item first row - MAC - train on CLEVR, test on CLEVR 
+\item all rows regaring S-MAC
+\end{itemize}
+
+When we will fill the whole table we will copy the results in here.
+
 \section{Illustration of failures of MAC on CLEVR}
+
+\begin{itemize}
+\item one with color failure -- that the attention is pointing at the right object, whereas the answer is improper because he never saw this combination
+\item one with shape failure -- similarly	
+\end{itemize}
+Pictures with some description
