--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -62,7 +62,7 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		\cmidrule{5-6} \cmidrule{7-8} 
 		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{96.85}          & CoGenT-A &  x         \\
 		\cmidrule{7-8} 
-		&                             &                                         &       &         &                & CoGenT-B &    x       \\
+		&                             &                                         &       &         &                & CoGenT-B &    94.55       \\
 		\bottomrule
 	\end{tabular}
 	\label{results}
