--- a/2018_nips_vigil/experiments.tex
+++ b/2018_nips_vigil/experiments.tex
@@ -23,11 +23,11 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		  &                        &   &              &     &                               & CoGenT-B   & 96.27  \\
 
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{x}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-A}         &       \multirow{2}{*}{98.06}          & CoGenT-A &  x         \\
 		\cmidrule{7-8} 
 		&                             &                                         &       &         &                & CoGenT-B &    x       \\
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{x}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{98.16}          & CoGenT-A &  x         \\
 		\cmidrule{7-8} 
 		&                             &                                         &       &         &                & CoGenT-B &    x       \\  
 		  
@@ -60,7 +60,7 @@ We implemented both versions of the MAC model using PyTorch v0.4.0~\cite{paszke2
 		\cmidrule{7-8} 
 		&                             &                                         &     &          &                & CogenT-B & 78.71          \\
 		\cmidrule{5-6} \cmidrule{7-8} 
-		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{96.85}          & CoGenT-A &  x         \\
+		&                             &                                         &    &   \multirow{2}{*}{CoGenT-B}         &       \multirow{2}{*}{96.85}          & CoGenT-A &  91.24         \\
 		\cmidrule{7-8} 
 		&                             &                                         &       &         &                & CoGenT-B &    94.55       \\
 		\bottomrule
